# ai-serch-google-sheets

./: .gitignore  README.md  STREAMLIT_SECRETS_TEMPLATE.txt  commands.md  convert_json_for_streamlit.py  credentials.json  env.template  pyproject.toml  requirements.txt
.streamlit/: secrets.example.toml
config/: env.example
src/: cli.py  config.py  dashboard.py  google_sheet.py  main.py
src/nlp/: llm.py
src/pipeline/: enricher.py
src/sources/: api_clients.py  web_scraper.py
src/top_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: text.py
